# calari

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yaml  minio.yaml  pyproject.toml  requirements.txt  test_email.py
backend/Auth/: admin.py  apps.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/Auth/migrations/: 0001_initial.py  0002_passwordresettoken.py  0003_alter_dashboarduser_role.py  0004_alter_dashboarduser_role.py  0005_dashboarduser_feature_permissions.py
backend/a2p/: apps.py  models.py  serializers.py  urls.py  views.py
backend/a2p/migrations/: 0001_initial.py
backend/builds/: apps.py  models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/builds/migrations/: 0001_initial.py  0003_alter_visiongap_category_calendar_integration.py  (+17 more)
backend/common/: permissions.py
backend/config/: asgi.py  celery.py  db_router.py  settings.py  storage.py  urls.py
backend/docs/: Ui-instractions.md  django-drf-template-architecture-guide.md
backend/onboarding/: admin.py  apps.py  integrations.py  models.py  oauth.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/projects/: consumers.py  models.py  permissions.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/vectorstore/: apps.py  models.py
(+232 files in other folders)
