[tool.poetry]
name = "calari-staff-portal"
version = "0.1.0"
description = ""
authors = ["Rezist007 <125888570+Rezist007@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.5"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0.1"
markdown = "^3.7"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
setuptools = "^75.1.0"
django-storages = "^1.14.4"
boto3 = "^1.35.50"
pillow = "^11.0.0"
gunicorn = "^23.0.0"
django-cors-headers = "^4.6.0"
pytest-django = "^4.9.0"
pytest-asyncio = "^0.24.0"
channels = {version = "^4.2.0", extras = ["extra.daphne"]}
channels-redis = "^4.2.1"
celery = {version = "^5.4.0", extras = ["extra.redis"]}
django-celery-beat = "^2.7.0"
daphne = "^4.1.2"
python-docx = "^1.1.2"
pypdf = "^5.1.0"
openai = "^2.0.0"
cryptography = "^44.0.0"
drf-spectacular = "^0.28.0"
weasyprint = "^65.1"
requests = "^2.32.4"
pandas = "^2.3.1"
xlsxwriter = "^3.2.5"
requests-ntlm = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
